fix: stabilize MySQL Excel import mapping